--- a/challenges/index.html
+++ b/challenges/index.html
@@ -7,6 +7,6 @@ root: ..
 <h2 id="topics">Challenges</h2>
 <ol style="list-style-type: decimal">
 <li><a href="unix.html">Unix Shell</a></li>
-<!-- <li><a href="git.html">Version Control with Git</a></li> -->
+<li><a href="git.html">Version Control with Git</a></li>
 <!-- <li><a href="python.html">Programming with Python</a></li> -->
 </ol>
