--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>14:50</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:10</td>  <td>Furher Git</td> </tr>
+      <tr> <td>15:10</td>  <td>Further Git</td> </tr>
       <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
@@ -171,7 +171,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <tr> <td>10:50</td>  <td>Coffee</td> </tr>
       <tr> <td>11:10</td>  <td>Conitinuing programs with Python</td>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Furher Python</td> </tr>
+      <tr> <td>13:30</td>  <td>Further Python</td> </tr>
       <tr> <td>14:50</td>  <td>Coffee</td> </tr>
       <tr> <td>15:10</td>  <td>Grand Exersise</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
@@ -556,7 +556,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 
     <p>
       Regardless of how you choose to install it,
-      <strong>please make sure you install Python version 2.6</strong>.
+      <strong>please make sure you install Python version 2.7</strong>.
     </p>
 
     <p>
