--- a/index.html
+++ b/index.html
@@ -321,6 +321,20 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li><a href="{{site.swc_githubio}}/git-novice/reference.html">Reference...</a></li>
     </ul>
   </div>
+  <div class="col-md-6">
+    <h3 id="syllabus-shell">AstroPy and SunPy</h3>
+    <ul>
+      <li>Defining and working with physical units</li>
+      <li>Working with image data as arrays</li>
+      <li>Plotting image data</li>
+      <li>Animating images</li>
+      <li>Working with coordinate systems</li>
+      <li>Storing data in tables</li>
+      <li>Working with time series data</li>
+      <li>Finding and downloading data</li>
+      <!-- <li><a href="{{site.swc_githubio}}/shell-novice/reference.html">Reference...</a></li> -->
+    </ul>
+  </div>
 </div>
 
 <hr/>
