--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Arrival</td>  <td><a href='{{ site.swc_pre_survey }}{{ site.github.project_title }}'>Pre-workshop Survey</a></td> </tr>
+        <!-->      <tr> <td>Arrival</td>  <td><a href='{{ site.swc_pre_survey }}{{ site.github.project_title }}'>Pre-workshop Survey</a></td> </tr>-->
       <tr> <td>09:00</td>  <td>Introduction and laptop fixing </td>
       <tr> <td>09:30</td>  <td>Automating tasks with the Unix shell</td> </tr>
       <tr> <td>10:50</td>  <td>Coffee</td> </tr>
