--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <h3>Day 1</h3>
     <table class="table table-striped">
         <!--      <tr> <td>Arrival</td>  <td><a href='{{ site.swc_pre_survey }}{{ site.github.project_title }}'>Pre-workshop Survey</a></td> </tr> -->
-      <tr> <td>09:00</td>  <td>Introduction and laptop fixing </td>
+      <tr> <td>09:00</td>  <td>Introduction and software checking / fixing</td>
       <tr> <td>09:30</td>  <td>Automating tasks with the Unix shell</td> </tr>
       <tr> <td>10:50</td>  <td>Coffee</td> </tr>
       <tr> <td>11:10</td>  <td>Further Unix</td> </tr>
