--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   for more information.
 </p>
 
+<p id="signup">
+    <strong>Register</strong>:
+    If you are intetested in attending please fill in <a href="https://goo.gl/forms/x38evpjDVxiWpxS72"> this form </aa>.
+</p>
 <hr/>
 
 <!--
