--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 
 <p id="signup">
     <strong>Register</strong>:
-    If you are intetested in attending please fill in <a href="https://goo.gl/forms/x38evpjDVxiWpxS72"> this form </aa>.
+    If you are intetested in attending please fill in <a href="https://goo.gl/forms/x38evpjDVxiWpxS72"> this form </a>.
 </p>
 <hr/>
 
