you call that a schedule

--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Further Python</td> </tr>
       <tr> <td>14:50</td>  <td>Coffee</td> </tr>
-      <tr> <td>15:10</td>  <td>Grand Exersise</td> </tr>
+      <tr> <td>15:10</td>  <td>Even Further Python</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
-      <tr> <td>10:00</td>  <td>Open Source in Astronomy</td> </tr>
-      <tr> <td>11:00</td>  <td>Contributing to Open Source Software</td> </tr>
+      <tr> <td>10:00</td>  <td>Approximating pi</td> </tr>
+      <tr> <td>11:30</td>  <td>Open Source in Astronomy</td> </tr>
     </table>
   </div>
     <div class="col-md-6">
@@ -196,21 +196,21 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <tr> <td>12:30</td>  <td>Lunch</td>
       <tr> <td>13:30</td>  <td>Images in Astronomy</td> </tr>
       <tr> <td>14:50</td>  <td>Tea and Coffee</td> </tr>
-      <tr> <td>15:10</td>  <td>AstroPy Tables</td> </tr>
+      <tr> <td>15:10</td>  <td>Images in Astronomy 2</td> </tr>
       <tr> <td>16:30</td>  <td>Wrap</td> </td> 
     </table>
     </div>
     <div class="col-md-6">
       <h3>Day 5</h3>
       <table class="table table-striped">
-      <tr> <td>09:30</td>  <td>Obtaining Solar and Astronomical data</td> </tr>
+      <tr> <td>09:30</td>  <td>AstroPy Tables</td> </tr>
       <tr> <td>10:50</td>  <td>Tea and Coffee</td> </tr>
-      <tr> <td>11:10</td>  <td>Time Series Data</td></tr>
+      <tr> <td>11:10</td>  <td>Obtaining Solar and Astronomical data</td> </tr>
       <tr> <td>12:45</td>  <td>Lunch</td> </tr>
-      <tr> <td>14:00</td>  <td>Grand Exersice</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap and a survey</td> </tr>
+      <tr> <td>14:00</td>  <td>Introduction to Time Series</td> </tr>
+      <tr> <td>16:00</td>  <td>Wrap</td> </tr>
       </table>
-  </div>
+    </div>
 </div>
 
 <!--
